--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#5b5656</color>
+    <color name="colorPrimaryDark">#4d4646</color>
+    <color name="colorAccent">#7fcd91</color>
+    <color name="colorGray">#f5eaea</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
