--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".WorkoutFragment">
 
-    <TextView
+    <Button
+        android:id="@+id/lg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Workout" />
+        android:text="Login"/>
 
 </RelativeLayout>
