--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginFragment">
+    tools:context=".LoginFragment"
+    >
 
     <ImageView
         android:id="@+id/logo_image"
@@ -14,9 +15,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/alt_logo" />
+        android:contentDescription="@string/alt_logo"
+        android:src="@drawable/logo"/>
 
     <TextView
+        android:textSize="25sp"
+        android:fontFamily="@font/baloopaaji"
+        android:layout_marginTop="20dp"
         android:id="@+id/login_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,6 +34,7 @@
 
     <com.google.android.gms.common.SignInButton
         android:layout_marginTop="50dp"
+        android:fontFamily="@font/baloopaaji"
         android:id="@+id/google_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
