--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,11 @@
     <dimen name="margin_normal">18dp</dimen>
     <dimen name="margin_medium">24dp</dimen>
     <dimen name="margin_large">48dp</dimen>
+    <dimen name="margin_larger">52dp</dimen>
 
     <dimen name="font_size_small">14sp</dimen>
     <dimen name="font_size_normal">18sp</dimen>
     <dimen name="font_size_medium">24sp</dimen>
+
+    <dimen name="logo_image_size">300dp</dimen>
 </resources>
