MODIFY set ids to fragments & extends base fragment

--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -3,5 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.WorkoutFragment">
+    tools:context=".view.fragments.WorkoutFragment"
+    android:id="@+id/workout_fragment">
 </RelativeLayout>
