--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.ProfileFragment">
+    tools:context=".view.fragments.ProfileFragment"
+    android:id="@+id/profile_fragment"
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/profile_image"
