--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin_smaller">8dp</dimen>
     <dimen name="margin_small">12dp</dimen>
     <dimen name="margin_normal">18dp</dimen>
     <dimen name="margin_medium">24dp</dimen>
