--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#5b5656</color>
     <color name="colorPrimaryDark">#4d4646</color>
-    <color name="colorAccent">#6FB37F</color>
+    <color name="colorAccent">#72A57D</color>
     <color name="colorGray">#D6D5D5</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
