--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,31 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.SplashActivity">
 
-    <ImageView
-        android:id="@+id/logo_image"
-        android:layout_width="@dimen/logo_image_size"
-        android:layout_height="@dimen/logo_image_size"
-        android:layout_marginBottom="@dimen/margin_large"
-        android:contentDescription="@string/alt_logo"
-        android:src="@drawable/logo"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UseCompoundDrawables">
 
-    <TextView
-        android:id="@+id/splash_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/baloopaaji"
-        android:text="@string/splash_string"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/font_size_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_image" />
+        <ImageView
+            android:id="@+id/logo_image"
+            android:layout_width="@dimen/logo_image_size_splash"
+            android:layout_height="@dimen/logo_image_size_splash"
+            android:contentDescription="@string/alt_logo"
+            android:src="@drawable/logo" />
 
+        <TextView
+            android:id="@+id/splash_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/merriweather_regular"
+            android:text="@string/splash_string"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/font_size_big" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
