--- a/app/src/main/res/layout/fragment_weight_history.xml
+++ b/app/src/main/res/layout/fragment_weight_history.xml
@@ -17,9 +17,9 @@
             android:id="@+id/weight_history_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/baloopaaji"
+            android:fontFamily="@font/sourcesanspro_semibold"
             android:text="@string/weight_history_title"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
             android:textSize="@dimen/font_size_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +29,7 @@
             android:id="@+id/weight_history_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
             app:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:fabSize="normal"
             app:tint="@color/colorWhite" />
 
