--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
+    android:padding="@dimen/margin_normal"
     tools:context=".view.fragments.ProfileFragment">
 
     <ImageView
@@ -102,7 +103,7 @@
         android:id="@+id/profile_bottom_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_normal"
         android:fontFamily="@font/merriweather_regular"
         android:text="@string/profile_bottom_info_text"
         android:textAlignment="center"
