--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -1,8 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/workout_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.WorkoutFragment"
-    android:id="@+id/workout_fragment">
-</RelativeLayout>
+    android:padding="@dimen/margin_normal"
+    tools:context=".view.fragments.WorkoutFragment">
+
+    <LinearLayout
+        android:id="@+id/workout_day_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/workout_day_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sourcesanspro_semibold"
+            android:text="@string/workout_day_name_default"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/font_size_large" />
+
+        <TextView
+            android:id="@+id/workout_day_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sourcesanspro_semibold"
+            android:text="@string/workout_day_date_default"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/font_size_normal" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/workout_day_exercises_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
+        app:layout_constraintBottom_toTopOf="@+id/workout_buttons_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workout_day_container" />
+
+    <LinearLayout
+        android:id="@+id/workout_buttons_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/workout_prev_day_button"
+            android:layout_width="@dimen/small_button_width"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/previous_day"
+            android:theme="@style/TextButton"
+            tools:ignore="ButtonStyle" />
+
+        <Button
+            android:id="@+id/workout_add_exercise_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/add_exercise"
+            android:theme="@style/TextButtonDarker"
+            tools:ignore="ButtonStyle" />
+
+        <Button
+            android:id="@+id/workout_next_day_button"
+            android:layout_width="@dimen/small_button_width"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/next_day"
+            android:theme="@style/TextButton"
+            tools:ignore="ButtonStyle" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
