--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="logo_margin">100dp</dimen>
 
     <dimen name="button_width">200dp</dimen>
+    <dimen name="small_button_width">110dp</dimen>
 
     <dimen name="dialog_input_width">250dp</dimen>
     <dimen name="dialog_button_width">90dp</dimen>
