--- a/app/src/main/res/layout/item_weight.xml
+++ b/app/src/main/res/layout/item_weight.xml
@@ -1,31 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorGray"
-    android:orientation="horizontal"
-    android:padding="@dimen/margin_normal"
-    android:layout_marginBottom="@dimen/margin_smaller"
-    android:gravity="center">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/colorGrayLight"
+    app:cardCornerRadius="@dimen/cardview_radius"
+    app:cardUseCompatPadding="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:elevation="@dimen/cardview_elevation"
+    android:focusable="true">
 
-    <TextView
-        android:id="@+id/weight_item_value"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/sourcesanspro_regular"
-        android:textSize="@dimen/font_size_medium"
-        android:textColor="@color/colorBlack"
-        android:layout_weight="7"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/margin_normal">
 
-    <TextView
-        android:id="@+id/weight_item_date"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/sourcesanspro_regular"
-        android:textSize="@dimen/font_size_normal"
-        android:textColor="@color/colorPrimary"
-        android:textAlignment="textEnd"
-        android:layout_weight="7"/>
+        <TextView
+            android:id="@+id/weight_item_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:fontFamily="@font/sourcesanspro_regular"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/font_size_medium" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/weight_item_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:fontFamily="@font/sourcesanspro_regular"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/font_size_normal" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
