ADD fragment exercise for show details & item history layouts & colors with styles

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorGrayLight">#E4E4E4</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorLightRed">#A85E5E</color>
 </resources>
