--- a/app/src/main/res/layout/dialog_delete_exercise.xml
+++ b/app/src/main/res/layout/dialog_delete_exercise.xml
@@ -22,19 +22,21 @@
         android:id="@+id/dialog_delete_exercise_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dialog_delete_exercise_title"
+        android:layout_marginTop="@dimen/margin_smaller"
+        android:layout_marginBottom="@dimen/margin_smaller"
         android:fontFamily="@font/sourcesanspro_regular"
         android:text="@string/dialog_delete_exercise_desc"
         android:textAlignment="textStart"
         android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/font_size_normal"
-        android:layout_below="@+id/dialog_delete_exercise_title"/>
+        android:textSize="@dimen/font_size_normal" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/dialog_delete_exercise_desc"
-        android:gravity="end"
         android:layout_marginTop="@dimen/margin_smaller"
+        android:gravity="end"
         android:orientation="horizontal">
 
         <Button
